--- a/inpaint.yml
+++ b/inpaint.yml
@@ -4,15 +4,15 @@ num_gpus_per_job: 1  # number of gpus each job need
 num_cpus_per_job: 4  # number of gpus each job need
 num_hosts_per_job: 1
 memory_per_job: 32  # number of gpus each job need
-gpu_type: 'nvidia-tesla-p100'
+gpu_type: 'nvidia-dgx-v100'
 
 # parameters
 name: places2_gated_conv_v100  # any name
-model_restore: ''  # logs/places2_gated_conv
-dataset: 'examples'  # 'tmnist', 'dtd', 'places2', 'celeba', 'imagenet', 'cityscapes'
+model_restore: 'model_logs/full_model_places2_building'  # logs/places2_gated_conv
+dataset: 'places2_building'  # 'tmnist', 'dtd', 'places2', 'celeba', 'imagenet', 'cityscapes'
 random_crop: False  # Set to false when dataset is 'celebahq', meaning only resize the images to img_shapes, instead of crop img_shapes from a larger raw image. This is useful when you train on images with different resolutions like places2. In these cases, please set random_crop to true.
 val: False  # true if you want to view validation results in tensorboard
-log_dir: logs/full_model_celeba_hq_256
+log_dir: model_logs/full_model_places2_building
 
 gan: 'sngan'
 gan_loss_alpha: 1
@@ -36,8 +36,8 @@ data_flist:
   ]
   # http://mmlab.ie.cuhk.edu.hk/projects/celeba.html, please to use random_crop: True
   celeba: [
-    'data/celeba/train_shuffled.flist',
-    'data/celeba/validation_static_view.flist'
+    'train_flist/train_celeba.flist',
+    'train_flist/validation_celeba.flist'
   ]
   # http://places2.csail.mit.edu/, please download the high-resolution dataset and use random_crop: True
   places2: [
@@ -47,12 +47,12 @@ data_flist:
   # http://www.image-net.org/, please use random_crop: True
   imagenet: [
     'data/imagenet/train_shuffled.flist',
-    'data/imagenet/validation_static_view.flist',
+    'data/imagenet/validation_static_view.flist'
   ]
-  # test examples
-  examples: [
-    './data_flist/train_shuffled.flist',
-    './data_flist/validation_shuffled.flist',
+  # places2_building
+  places2_building: [
+    'train_flist/train_places2_building.flist',
+    'train_flist/validation_places2_building.flist'
   ]
 
 static_view_size: 30
