--- a/inpaint.yml
+++ b/inpaint.yml
@@ -8,11 +8,11 @@ gpu_type: 'nvidia-dgx-v100'
 
 # parameters
 name: places2_gated_conv_v100  # any name
-model_restore: 'model_logs/full_model_places2_building'  # logs/places2_gated_conv
-dataset: 'places2_building'  # 'tmnist', 'dtd', 'places2', 'celeba', 'imagenet', 'cityscapes'
+model_restore: 'model_logs/full_model_places2'  # logs/places2_gated_conv
+dataset: 'places2'  # 'tmnist', 'dtd', 'places2', 'celeba', 'imagenet', 'cityscapes'
 random_crop: False  # Set to false when dataset is 'celebahq', meaning only resize the images to img_shapes, instead of crop img_shapes from a larger raw image. This is useful when you train on images with different resolutions like places2. In these cases, please set random_crop to true.
 val: False  # true if you want to view validation results in tensorboard
-log_dir: model_logs/full_model_places2_building
+log_dir: model_logs/full_model_places2
 
 gan: 'sngan'
 gan_loss_alpha: 1
@@ -41,18 +41,13 @@ data_flist:
   ]
   # http://places2.csail.mit.edu/, please download the high-resolution dataset and use random_crop: True
   places2: [
-    'data/places2/train_shuffled.flist',
-    'data/places2/validation_static_view.flist'
+    'flist/train_places2.flist',
+    'flist/validation_places2.flist'
   ]
   # http://www.image-net.org/, please use random_crop: True
   imagenet: [
     'data/imagenet/train_shuffled.flist',
     'data/imagenet/validation_static_view.flist'
-  ]
-  # places2_building
-  places2_building: [
-    'train_flist/train_places2_building.flist',
-    'train_flist/validation_places2_building.flist'
   ]
 
 static_view_size: 30
